syntax = "proto3";

option go_package = "api/rickmorty";

package api.rickmorty;

import "google/protobuf/empty.proto";

service RickMortyService {
  rpc ListAllCharacters(google.protobuf.Empty) returns (CharactersResponse);
  rpc ListAllCharactersServerStream(google.protobuf.Empty) returns (stream CharactersResponse);
  rpc ListByPageClientStream(stream PageRequest) returns (CharactersResponse);
}

message CharactersResponse {
  int32 total = 1;
  repeated Character characters = 2;
}

message Character {
  string name = 1;
  string species = 2;
}

message PageRequest {
  int32 page = 1;
}